--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -4,6 +4,8 @@ body {
     display: flex;
 }
 
+/* Sidebar */
+
 .sidebar {
     width: 250px;
     background-color: #2c3e50;
@@ -49,6 +51,7 @@ body {
 .sidebar ul li a:hover {
     background-color: #5f778f;
 }
+
 
 .main-content {
     flex: 1;
@@ -133,6 +136,18 @@ body {
     background-color: #34495e;
     color: white;
     border-radius: 5px;
+}
+.logout-button {
+    background-color: #2c3e50; /* Change this to your preferred color */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.logout-button:hover {
+    background-color: #34495e; /* You can change this hover color too */
 }
 
 
