--- a/styles/login.css
+++ b/styles/login.css
@@ -12,7 +12,7 @@ html {
 
 .side {
   flex: 1;
-  background-color: #a9856c;
+  background-color: #146cbf;
   background-image: linear-gradient(19deg, #34495e 0%, #96a2b4 100%);
   display: flex;
   flex-direction: column;
@@ -93,14 +93,14 @@ form {
 }
 
 .inputF {
-  border-bottom: 1px solid #757575;
+  border-bottom: 1px solid #146cbf;
   width: 100%;
   padding-bottom: 5px;
   margin-top: 40px;
 }
 
 .inputF i {
-  color: #707070;
+  color: #606162;
   margin: 0 8px 0 7px;
 }
 
