--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -127,3 +127,62 @@
             color: #777;
             margin-bottom: 10px;
         }
+/* Sidebar Styling */
+.sidebar {
+    width: 240px;
+    background-color: #2C3E50;
+    color: #fff;
+    padding: 20px;
+    position: fixed;
+    height: 100%;
+}
+
+.profile {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.profile-pic {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.nav-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.nav-menu li {
+    margin-bottom: 15px;
+}
+
+.nav-menu a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    display: block;
+    padding: 10px;
+    background-color: #34495E;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.nav-menu a:hover {
+    background-color: #1ABC9C;
+}
+
+.submenu {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+.submenu a {
+    background-color: #2C3E50;
+    padding: 5px 10px;
+}
+
+.submenu a:hover {
+    background-color: #1ABC9C;
+}
