--- a/styles/dashboard-user.css
+++ b/styles/dashboard-user.css
@@ -161,3 +161,24 @@ body {
     padding-bottom: 10px;
     display: inline-block; /* To shrink the underline to the text width */
 }
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    z-index: 1000;
+}
+.popup-content {
+    text-align: center;
+}
+.popup-content form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
