--- a/styles/edit-profile.css
+++ b/styles/edit-profile.css
@@ -130,3 +130,19 @@ body {
     margin-bottom: 15px;
     color: green;
 }
+
+
+.profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile-picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
