--- a/styles/login.css
+++ b/styles/login.css
@@ -119,6 +119,7 @@ main .submit {
   width: 70%;
   text-align: center;
   margin-top: 60px;
+  margin-right: 50px;
 }
 
 main .submit button {
@@ -129,6 +130,7 @@ main .submit button {
   width: 300px;
   padding-top: 10px;
   border-radius: 50px;
+ 
 }
 
 main .submit button:hover {
@@ -174,7 +176,7 @@ main .submit button:hover {
   text-align: center;
   width: 300px;
   margin: 20px auto;
-  margin-left: 55px;
+  margin-left: 30px;
   
 }
 
@@ -185,13 +187,15 @@ main .submit button:hover {
 }
 
 .signup-button {
-  background-image: linear-gradient(19deg, #34495e 0%, #7283aa 100%);
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
   height: 40px;
   width: 100%;
   padding-top: 10px;
   border-radius: 50px;
+  border: 2px solid #34345e; /* Add this line */
 }
+
 
 .signup-button:hover {
   transition: 0.19s;
